# libelf

./: Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
src/: endian.rs  lib.rs
src/header/: ident.rs  mod.rs
src/tests/: mod.rs
